@@ -1,0 +1,155 @@
+{0, 0, "M-42 or No Lens"},
+{1, 0, "K or M Lens"},
+{2, 0, "A Series Lens"},
+{3, 0, "Sigma"},
+{3, 17, "smc PENTAX-FA SOFT 85mm F2.8"},
+{3, 18, "smc PENTAX-F 1.7X AF ADAPTER"},
+{3, 19, "smc PENTAX-F 24-50mm F4"},
+{3, 20, "smc PENTAX-F 35-80mm F4-5.6"},
+{3, 21, "smc PENTAX-F 80-200mm F4.7-5.6"},
+{3, 22, "smc PENTAX-F FISH-EYE 17-28mm F3.5-4.5"},
+{3, 23, "smc PENTAX-F 100-300mm F4.5-5.6 or Sigma Lens"},
+{3, 24, "smc PENTAX-F 35-135mm F3.5-4.5"},
+{3, 25, "smc PENTAX-F 35-105mm F4-5.6 or Sigma or Tokina Lens"},
+{3, 26, "smc PENTAX-F* 250-600mm F5.6 ED[IF]"},
+{3, 27, "smc PENTAX-F 28-80mm F3.5-4.5 or Tokina Lens"},
+{3, 28, "smc PENTAX-F 35-70mm F3.5-4.5 or Tokina Lens"},
+{3, 29, "PENTAX-F 28-80mm F3.5-4.5 or Sigma or Tokina Lens"},
+{3, 30, "PENTAX-F 70-200mm F4-5.6"},
+{3, 31, "smc PENTAX-F 70-210mm F4-5.6 or Tokina or Takumar Lens"},
+{3, 32, "smc PENTAX-F 50mm F1.4"},
+{3, 33, "smc PENTAX-F 50mm F1.7"},
+{3, 34, "smc PENTAX-F 135mm F2.8 [IF]"},
+{3, 35, "smc PENTAX-F 28mm F2.8"},
+{3, 36, "Sigma 20mm F1.8 EX DG Aspherical RF"},
+{3, 38, "smc PENTAX-F* 300mm F4.5 ED[IF]"},
+{3, 39, "smc PENTAX-F* 600mm F4 ED[IF]"},
+{3, 40, "smc PENTAX-F MACRO 100mm F2.8"},
+{3, 41, "smc PENTAX-F MACRO 50mm F2.8 or Sigma Lens"},
+{3, 44, "Sigma or Tamron Lens (3 44)"},
+{3, 46, "Sigma Lens (3 46)"},
+{3, 50, "smc PENTAX-FA 28-70mm F4 AL"},
+{3, 51, "Sigma 28mm F1.8 EX DG Aspherical Macro"},
+{3, 52, "smc PENTAX-FA 28-200mm F3.8-5.6 AL[IF] or Tamron Lens"},
+{3, 53, "smc PENTAX-FA 28-80mm F3.5-5.6 AL"},
+{3, 247, "smc PENTAX-DA FISH-EYE 10-17mm F3.5-4.5 ED[IF]"},
+{3, 248, "smc PENTAX-DA 12-24mm F4 ED AL[IF]"},
+{3, 250, "smc PENTAX-DA 50-200mm F4-5.6 ED"},
+{3, 251, "smc PENTAX-DA 40mm F2.8 Limited"},
+{3, 252, "smc PENTAX-DA 18-55mm F3.5-5.6 AL"},
+{3, 253, "smc PENTAX-DA 14mm F2.8 ED[IF]"},
+{3, 254, "smc PENTAX-DA 16-45mm F4 ED AL"},
+{3, 255, "Sigma Lens (3 255)"},
+{4, 1, "smc PENTAX-FA SOFT 28mm F2.8"},
+{4, 2, "smc PENTAX-FA 80-320mm F4.5-5.6"},
+{4, 3, "smc PENTAX-FA 43mm F1.9 Limited"},
+{4, 6, "smc PENTAX-FA 35-80mm F4-5.6"},
+{4, 12, "smc PENTAX-FA 50mm F1.4"},
+{4, 15, "smc PENTAX-FA 28-105mm F4-5.6 [IF]"},
+{4, 16, "Tamron AF 80-210mm F4-5.6 (178D)"},
+{4, 19, "Tamron SP AF 90mm F2.8 (172E)"},
+{4, 20, "smc PENTAX-FA 28-80mm F3.5-5.6"},
+{4, 21, "Cosina AF 100-300mm F5.6-6.7"},
+{4, 22, "Tokina 28-80mm F3.5-5.6"},
+{4, 23, "smc PENTAX-FA 20-35mm F4 AL"},
+{4, 24, "smc PENTAX-FA 77mm F1.8 Limited"},
+{4, 25, "Tamron SP AF 14mm F2.8"},
+{4, 26, "smc PENTAX-FA MACRO 100mm F3.5 or Cosina Lens"},
+{4, 27, "Tamron AF 28-300mm F3.5-6.3 LD Aspherical[IF] Macro (185D/285D)"},
+{4, 28, "smc PENTAX-FA 35mm F2 AL"},
+{4, 29, "Tamron AF 28-200mm F3.8-5.6 LD Super II Macro (371D)"},
+{4, 34, "smc PENTAX-FA 24-90mm F3.5-4.5 AL[IF]"},
+{4, 35, "smc PENTAX-FA 100-300mm F4.7-5.8"},
+{4, 36, "Tamron AF70-300mm F4-5.6 LD Macro"},
+{4, 37, "Tamron SP AF 24-135mm F3.5-5.6 AD AL (190D)"},
+{4, 38, "smc PENTAX-FA 28-105mm F3.2-4.5 AL[IF]"},
+{4, 39, "smc PENTAX-FA 31mm F1.8AL Limited"},
+{4, 41, "Tamron AF 28-200mm Super Zoom F3.8-5.6 Aspherical XR [IF] Macro (A03)"},
+{4, 43, "smc PENTAX-FA 28-90mm F3.5-5.6"},
+{4, 44, "smc PENTAX-FA J 75-300mm F4.5-5.8 AL"},
+{4, 45, "Tamron Lens (4 45)"},
+{4, 46, "smc PENTAX-FA J 28-80mm F3.5-5.6 AL"},
+{4, 47, "smc PENTAX-FA J 18-35mm F4-5.6 AL"},
+{4, 49, "Tamron SP AF 28-75mm F2.8 XR Di (A09)"},
+{4, 51, "smc PENTAX-D FA 50mm F2.8 MACRO"},
+{4, 52, "smc PENTAX-D FA 100mm F2.8 MACRO"},
+{4, 75, "Tamron SP AF 70-200mm F2.8 Di LD [IF] Macro (A001)"},
+{4, 229, "smc PENTAX-DA 18-55mm F3.5-5.6 AL II"},
+{4, 230, "Tamron SP AF 17-50mm F2.8 XR Di II"},
+{4, 231, "smc PENTAX-DA 18-250mm F3.5-6.3 ED AL [IF]"},
+{4, 237, "Samsung/Schneider D-XENOGON 10-17mm F3.5-4.5"},
+{4, 239, "Samsung D-XENON 12-24mm F4 ED AL [IF]"},
+{4, 243, "smc PENTAX-DA 70mm F2.4 Limited"},
+{4, 244, "smc PENTAX-DA 21mm F3.2 AL Limited"},
+{4, 245, "Schneider D-XENON 50-200mm F4-5.6"},
+{4, 246, "Schneider D-XENON 18-55mm F3.5-5.6"},
+{4, 247, "smc PENTAX-DA FISH-EYE 10-17mm F3.5-4.5 ED[IF]"},
+{4, 248, "smc PENTAX-DA 12-24mm F4 ED AL [IF]"},
+{4, 249, "Tamron XR DiII 18-200mm F3.5-6.3 (A14)"},
+{4, 250, "smc PENTAX-DA 50-200mm F4-5.6 ED"},
+{4, 251, "smc PENTAX-DA 40mm F2.8 Limited"},
+{4, 252, "smc PENTAX-DA 18-55mm F3.5-5.6 AL"},
+{4, 253, "smc PENTAX-DA 14mm F2.8 ED[IF]"},
+{4, 254, "smc PENTAX-DA 16-45mm F4 ED AL"},
+{5, 1, "smc PENTAX-FA* 24mm F2 AL[IF]"},
+{5, 2, "smc PENTAX-FA 28mm F2.8 AL"},
+{5, 3, "smc PENTAX-FA 50mm F1.7"},
+{5, 4, "smc PENTAX-FA 50mm F1.4"},
+{5, 5, "smc PENTAX-FA* 600mm F4 ED[IF]"},
+{5, 6, "smc PENTAX-FA* 300mm F4.5 ED[IF]"},
+{5, 7, "smc PENTAX-FA 135mm F2.8 [IF]"},
+{5, 8, "smc PENTAX-FA MACRO 50mm F2.8"},
+{5, 9, "smc PENTAX-FA MACRO 100mm F2.8"},
+{5, 10, "smc PENTAX-FA* 85mm F1.4 [IF]"},
+{5, 11, "smc PENTAX-FA* 200mm F2.8 ED[IF]"},
+{5, 12, "smc PENTAX-FA 28-80mm F3.5-4.7"},
+{5, 13, "smc PENTAX-FA 70-200mm F4-5.6"},
+{5, 14, "smc PENTAX-FA* 250-600mm F5.6 ED[IF]"},
+{5, 15, "smc PENTAX-FA 28-105mm F4-5.6"},
+{5, 16, "smc PENTAX-FA 100-300mm F4.5-5.6"},
+{5, 98, "smc PENTAX-FA 100-300mm F4.5-5.6"},
+{6, 1, "smc PENTAX-FA* 85mm F1.4 [IF]"},
+{6, 2, "smc PENTAX-FA* 200mm F2.8 ED[IF]"},
+{6, 3, "smc PENTAX-FA* 300mm F2.8 ED[IF]"},
+{6, 4, "smc PENTAX-FA* 28-70mm F2.8 AL"},
+{6, 5, "smc PENTAX-FA* 80-200mm F2.8 ED[IF]"},
+{6, 6, "smc PENTAX-FA* 28-70mm F2.8 AL"},
+{6, 7, "smc PENTAX-FA* 80-200mm F2.8 ED[IF]"},
+{6, 8, "smc PENTAX-FA 28-70mm F4AL"},
+{6, 9, "smc PENTAX-FA 20mm F2.8"},
+{6, 10, "smc PENTAX-FA* 400mm F5.6 ED[IF]"},
+{6, 13, "smc PENTAX-FA* 400mm F5.6 ED[IF]"},
+{6, 14, "smc PENTAX-FA* MACRO 200mm F4 ED[IF]"},
+{7, 0, "smc PENTAX-DA 21mm F3.2 AL Limited"},
+{7, 75, "Tamron SP AF 70-200mm F2.8 Di LD [IF] Macro (A001)"},
+{7, 214, "smc PENTAX-DA 35mm F2.4 AL"},
+{7, 216, "smc PENTAX-DA L 55-300mm F4-5.8 ED"},
+{7, 217, "smc PENTAX-DA 50-200mm F4-5.6 ED WR"},
+{7, 218, "smc PENTAX-DA 18-55mm F3.5-5.6 AL WR"},
+{7, 220, "Tamron SP AF 10-24mm F3.5-4.5 Di II LD Aspherical [IF]"},
+{7, 222, "smc PENTAX-DA L 18-55mm F3.5-5.6"},
+{7, 223, "Samsung D-XENON 18-55mm F3.5-5.6 II"},
+{7, 224, "smc PENTAX-DA 15mm F4 ED AL Limited"},
+{7, 225, "Samsung D-XENON 18-250mm F3.5-6.3"},
+{7, 229, "smc PENTAX-DA 18-55mm F3.5-5.6 AL II"},
+{7, 230, "Tamron AF 17-50mm F2.8 XR Di-II LD (Model A16)"},
+{7, 231, "smc PENTAX-DA 18-250mm F3.5-6.3 ED AL [IF]"},
+{7, 233, "smc PENTAX-DA 35mm F2.8 Macro Limited"},
+{7, 234, "smc PENTAX-DA* 300mm F4 ED [IF] SDM (SDM unused)"},
+{7, 235, "smc PENTAX-DA* 200mm F2.8 ED [IF] SDM (SDM unused)"},
+{7, 236, "smc PENTAX-DA 55-300mm F4-5.8 ED"},
+{7, 238, "Tamron AF 18-250mm F3.5-6.3 Di II LD Aspherical [IF] Macro"},
+{7, 241, "smc PENTAX-DA* 50-135mm F2.8 ED [IF] SDM (SDM unused)"},
+{7, 242, "smc PENTAX-DA* 16-50mm F2.8 ED AL [IF] SDM (SDM unused)"},
+{7, 243, "smc PENTAX-DA 70mm F2.4 Limited"},
+{7, 244, "smc PENTAX-DA 21mm F3.2 AL Limited"},
+{8, 14, "Sigma 17-70mm F2.8-4.0 DC Macro OS HSM"},
+{8, 215, "smc PENTAX-DA 18-135mm F3.5-5.6 ED AL [IF] DC WR"},
+{8, 226, "smc PENTAX-DA* 55mm F1.4 SDM"},
+{8, 227, "smc PENTAX DA* 60-250mm F4 [IF] SDM"},
+{8, 232, "smc PENTAX-DA 17-70mm F4 AL [IF] SDM"},
+{8, 234, "smc PENTAX-DA* 300mm F4 ED [IF] SDM"},
+{8, 235, "smc PENTAX-DA* 200mm F2.8 ED [IF] SDM"},
+{8, 241, "smc PENTAX-DA* 50-135mm F2.8 ED [IF] SDM"},
+{8, 242, "smc PENTAX-DA* 16-50mm F2.8 ED AL [IF] SDM"},
+{8, 255, "Sigma Lens (8 255)"},
